<resources>
    <string name="app_name">Gank</string>
    <string name="copyright">by:v1ncent</string>

    <string name="daily">首页</string>
    <string name="follow">关注</string>
    <string name="find">发现</string>
    <string name="me">我的</string>

    <!--网络连接失败错误-->
    <string name="no_internet">无网络连接~！</string>
    <string name="generic_server_down">连接服务器失败~！</string>
    <string name="generic_error">网络异常,请稍后再试~！</string>

    <string name="splash">.io</string>
    <string name="close">关闭</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="location">所在地</string>
    <string name="homepage">个人主页</string>
    <string name="personal_profile">个人简介</string>
    <string name="company">公司</string>
    <string name="add_company_experience">+ 添加公司经历</string>
    <string name="school">学校</string>
    <string name="add_school_experience">+ 添加教育经历</string>
    <string name="phone_num">手机号</string>
    <string name="password_reset">重置密码</string>
    <string name="my_love">我喜欢的</string>
    <string name="collocation">收藏的文章</string>
    <string name="read_history">浏览历史</string>
    <string name="personal_data">个人资料</string>
    <string name="load_image_mobile">移动网络下加载图片</string>
    <string name="preference_setting">偏好设置</string>
    <string name="others">其他</string>
    <string name="clear_cache">清理缓存</string>
    <string name="about_us">关于我们</string>

    <!--Android M Permission-->
    <string name="setting">设置</string>
    <string name="perm_tip">
        当前应用缺少必要权限。\n请点击"设置"-"权限"-打开所需权限。\n最后点击两次后退按钮，即可返回。
    </string>
    <string name="ask_again">请给予应用必要权限，让程序可正常工作。</string>
    <string name="cancel">取消</string>
    <string name="ios">iOS</string>
    <string name="android">Android</string>
    <string name="module_front_end">前端</string>
    <string name="module_blind_recommend">瞎推荐</string>
    <string name="module_video">休息视频</string>
    <string name="module_expansion">拓展资源</string>
    <string name="pupop_collect">收藏</string>
    <string name="pupop_share">分享</string>
    <string name="pupop_link">复制链接</string>
    <string name="pupop_web">浏览器打开</string>
    <string name="pupop_refresh">刷新页面</string>

    <string name="search">搜索</string>
    <string name="photo_save">保存图片</string>

</resources>
