<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pupop_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:padding="@dimen/padding_12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/pupop_collect"
            android:layout_width="@dimen/padding_100"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/img_10"
            android:paddingLeft="@dimen/padding_2"
            android:paddingTop="@dimen/padding_4">

            <ImageView
                android:layout_width="@dimen/img_20"
                android:layout_height="@dimen/img_20"
                android:src="@mipmap/pupop_collect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_8"
                android:text="@string/pupop_collect"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_1px"
            android:background="@color/gray_8a" />

        <LinearLayout
            android:id="@+id/pupop_share"
            android:layout_width="@dimen/padding_100"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_8"
            android:paddingTop="@dimen/padding_8">

            <ImageView
                android:layout_width="@dimen/img_25"
                android:layout_height="@dimen/img_25"
                android:src="@mipmap/pupop_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_4"
                android:text="@string/pupop_share"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_1px"
            android:background="@color/gray_8a" />

        <LinearLayout
            android:id="@+id/pupop_link"
            android:layout_width="@dimen/padding_100"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/img_12"
            android:paddingLeft="@dimen/padding_4"
            android:paddingTop="@dimen/img_13">

            <ImageView
                android:layout_width="@dimen/img_19"
                android:layout_height="@dimen/img_19"
                android:src="@mipmap/pupop_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_4"
                android:text="@string/pupop_link"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_1px"
            android:background="@color/gray_8a" />

        <LinearLayout
            android:id="@+id/pupop_web"
            android:layout_width="@dimen/padding_100"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_12"
            android:paddingLeft="@dimen/padding_5"
            android:paddingTop="@dimen/img_12">

            <ImageView
                android:layout_width="@dimen/img_16"
                android:layout_height="@dimen/img_16"
                android:src="@mipmap/pupop_web" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_8"
                android:text="@string/pupop_web"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_1px"
            android:background="@color/gray_8a" />

        <LinearLayout
            android:id="@+id/pupop_refresh"
            android:layout_width="@dimen/padding_100"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_4"
            android:paddingLeft="@dimen/padding_5"
            android:paddingTop="@dimen/img_12">

            <ImageView
                android:layout_width="@dimen/img_18"
                android:layout_height="@dimen/img_18"
                android:src="@mipmap/pupop_refresh" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_8"
                android:text="@string/pupop_refresh"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>